--- a/lewis/ml_test_xgboost_1119.ipynb
+++ b/lewis/ml_test_xgboost_1119.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -35,39 +35,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "trn = pd.read_csv('../data/train.csv')\n",
+    "# trn = pd.read_csv('../data/train.csv')\n",
     "# trn = pd.read_csv('../data/train_10.csv', index_col=0)  # column #0 in our file is DataFrame index\n",
-    "# trn = pd.read_csv('../data/train_1.csv', index_col=0)\n",
+    "trn = pd.read_csv('../data/train_1.csv', index_col=0)\n",
     "# test = pd.read_csv('../data/test.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Time elapsed: 1.4094 secs\n"
-     ]
-    }
-   ],
-   "source": [
-    "t = time.time()\n",
-    "trn_withRef = trn[trn['Ref'].notnull()]\n",
-    "# test_withRef = test[test['Ref'].notnull()]\n",
-    "del trn\n",
-    "print 'Time elapsed: {:.4f} secs'.format(time.time()-t)  # toc"
    ]
   },
   {
@@ -81,7 +58,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 18.4084 secs\n"
+      "Time elapsed: 0.0713 secs\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = time.time()\n",
+    "trn_withRef = trn[trn['Ref'].notnull()]\n",
+    "# test_withRef = test[test['Ref'].notnull()]\n",
+    "del trn\n",
+    "print 'Time elapsed: {:.4f} secs'.format(time.time()-t)  # toc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time elapsed: 0.5505 secs\n"
      ]
     }
    ],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -124,22 +124,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "# preprocessing\n",
-    "imp1 = Imputer(strategy='mean', copy=True)  # Get a imputor with column-mean filling config\n",
-    "ss1 = StandardScaler(copy=False, with_mean=True, with_std=True)\n",
-    "clf1 = RandomForestRegressor(n_estimators=40, max_features='sqrt', max_depth=5, n_jobs=4)\n",
-    "pip1 = Pipeline([('imp',imp1), ('ss',ss1), ('clf', clf1)])  # a Pipeline wrapper to chain'em up"
+    "imp = Imputer(strategy='median', copy=True)  # Get a imputor with column-mean filling config\n",
+    "ss = StandardScaler(copy=False, with_mean=True, with_std=True)\n",
+    "clf = xgb.sklearn.XGBRegressor(n_estimators=20, nthread=2)\n",
+    "pip1 = Pipeline([('imp',imp), ('ss',ss), ('clf', clf)])  # a Pipeline wrapper to chain'em up"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -148,14 +148,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23.2683538325 1.58087644069\n"
+      "17.3405146982 2.44880093437\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed:  4.7min finished\n"
+      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed:   44.2s finished\n"
      ]
     }
    ],
@@ -164,116 +164,6 @@
     "scores = cross_val_score(estimator=pip1, X=X, y=y, scoring=scorer, cv=10, n_jobs=1, verbose=1)\n",
     "print np.mean(scores), np.std(scores)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Impute before cv split"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "imp2 = Imputer(strategy='mean', copy=True)\n",
-    "X_imp = imp2.fit_transform(X)\n",
-    "ss2 = StandardScaler(copy=False, with_mean=True, with_std=True)\n",
-    "clf2 = RandomForestRegressor(n_estimators=40, max_features='sqrt', max_depth=5, n_jobs=4)\n",
-    "pip2 = Pipeline([('ss',ss2), ('clf', clf2)])  # a Pipeline wrapper to chain'em up"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "23.268932147 1.58039111499\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed:  5.1min finished\n"
-     ]
-    }
-   ],
-   "source": [
-    "# preprocessing\n",
-    "scorer = make_scorer(MAE_logy, greater_is_better=True)  # define scoring metric\n",
-    "scores = cross_val_score(estimator=pip2, X=X_imp, y=y, scoring=scorer, cv=10, n_jobs=1, verbose=1)\n",
-    "print np.mean(scores), np.std(scores)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Impute after cv split + median"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# preprocessing\n",
-    "imp3 = Imputer(strategy='median')  # Get a imputor with column-mean filling config\n",
-    "ss3 = StandardScaler(copy=False, with_mean=True, with_std=True)\n",
-    "clf3 = RandomForestRegressor(n_estimators=40, max_features='sqrt', max_depth=5, n_jobs=4)\n",
-    "pip3 = Pipeline([('imp',imp3), ('ss',ss3), ('clf', clf3)])  # a Pipeline wrapper to chain'em up"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "23.2674629028 1.57987458739\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed:  7.8min finished\n"
-     ]
-    }
-   ],
-   "source": [
-    "scorer = make_scorer(MAE_logy, greater_is_better=True)  # define scoring metric\n",
-    "scores = cross_val_score(estimator=pip3, X=X, y=y, scoring=scorer, cv=10, n_jobs=1, verbose=1)\n",
-    "print np.mean(scores), np.std(scores)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
