--- a/lewis/ml_test_CV.ipynb
+++ b/lewis/ml_test_CV.ipynb
@@ -35,7 +35,7 @@
     "import xgboost as xgb\n",
     "#\n",
     "from blending import BlendedRegressor\n",
-    "from cleaning import TargetThresholdFilter\n",
+    "from cleaning import TargetThresholdFilter, LogPlusOne\n",
     "#\n",
     "pd.set_option('display.max_columns', 500)  # force pandas to display all columns for better visual inspection\n",
     "# plot plots inline\n",
