--- a/lewis/ml_test_rf_1120.ipynb
+++ b/lewis/ml_test_rf_1120.ipynb
@@ -2,9 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -59,7 +59,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 0.7625 secs\n"
+      "Time elapsed: 0.3537 secs\n"
      ]
     }
    ],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -80,7 +80,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 10.6242 secs\n"
+      "Time elapsed: 7.0616 secs\n"
      ]
     }
    ],
@@ -95,19 +95,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(731556, 132) (731556,)\n"
+     ]
+    }
+   ],
    "source": [
     "X = trn_withRef_comb.loc[:, 'minutes_past_mean':'Kdp_5x5_90th_max']  # NOTE: used range slicing on column\n",
-    "y = trn_withRef_comb['Expected_mean']"
+    "y = trn_withRef_comb['Expected_mean']\n",
+    "print X.shape, y.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -117,10 +126,11 @@
     "lpo = LogPlusOne()\n",
     "imp = Imputer(strategy='median', copy=False)  # Get a imputor with column-mean filling config\n",
     "ss = StandardScaler(copy=False, with_mean=True, with_std=True)\n",
-    "clf = RandomForestRegressor(n_estimators=800, max_features='sqrt', max_depth=5, n_jobs=2)\n",
+    "clf = RandomForestRegressor(n_estimators=100, max_features='sqrt', max_depth=5, n_jobs=6)\n",
     "pip = Pipeline([('ttf',ttf), ('lpo',lpo), ('imp',imp), ('ss',ss), ('clf',clf)])  # a Pipeline wrapper to chain'em up\n",
     "def LogPlusOne_score(ground_truth, predictions, lpo=lpo):\n",
-    "    return np.float64(np.mean(np.abs(ground_truth - (np.power(10, predictions) - 1))))"
+    "    return np.float64(np.mean(np.abs(ground_truth - (np.power(10, predictions) - 1))))\n",
+    "scorer = make_scorer(LogPlusOne_score, greater_is_better=True)  # define scoring metric"
    ]
   },
   {
@@ -132,34 +142,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23.2669921294 1.58023951984\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(steps=[('ttf', <cleaning.TargetThresholdFilter object at 0x7f69dbaed8d0>), ('lpo', <cleaning.LogPlusOne object at 0x7f69dbaed910>), ('imp', Imputer(axis=0, copy=False, missing_values='NaN', strategy='median',\n",
+       "    verbose=0)), ('ss', StandardScaler(copy=False, with_mean=True, with_std=True)), ('clf',...imators=800, n_jobs=2, oob_score=False, random_state=None,\n",
+       "           verbose=0, warm_start=False))])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "scorer = make_scorer(LogPlusOne_score, greater_is_better=True)  # define scoring metric\n",
-    "scores = cross_val_score(estimator=pip, X=X, y=y, scoring=scorer, cv=10, n_jobs=1, verbose=1)"
+    "scores = cross_val_score(estimator=pip, X=X, y=y, scoring=scorer, cv=10, n_jobs=1, verbose=1)\n",
+    "print np.mean(scores), np.std(scores)\n",
+    "pip"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "scrolled": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# Pipeline(steps=[\n",
-    "# ('imp', Imputer(axis=0, copy=True, missing_values='NaN', strategy='median', verbose=0))\n",
-    "# ('ss', StandardScaler(copy=False, with_mean=True, with_std=True)), \n",
-    "# ('clf', XGBRegressor(base_score=0.5, colsample_bylevel=1, colsample_bytree=1, gamma=0,\n",
-    "#       learning_rate=0.1, max_delta_step=0, max_depth=3,\n",
-    "#       min_child_weight=1, missing=None, n_estimators=500, nthread=5,\n",
-    "#       objective='reg:linear', reg_alpha=0, reg_lambda=1,\n",
-    "#       scale_pos_weight=1, seed=0, silent=True, subsample=1))])\n",
-    "print np.mean(scores), np.std(scores)"
+    "# Sweep parameter\n",
+    "param_name, param_range='clf__max_features', np.arange(0.01, 0.1, 0.01)\n",
+    "train_scores, test_scores= validation_curve(estimator=pip, X=X, y=y, scoring=scorer, cv=10, n_jobs=1, \n",
+    "                          param_name=param_name, param_range=param_range, verbose=1)\n",
+    "train_scores_mean = np.mean(train_scores, axis=1)\n",
+    "train_scores_std = np.std(train_scores, axis=1)\n",
+    "test_scores_mean = np.mean(test_scores, axis=1)\n",
+    "test_scores_std = np.std(test_scores, axis=1)\n",
+    "# Plotting the validation curver, i.e. trn/val error versus parameter value\n",
+    "plt.title(\"Validation Curve\")\n",
+    "plt.xlabel(param_name)\n",
+    "plt.ylabel(\"Score\")\n",
+    "plt.plot(param_range, train_scores_mean, label=\"Training score\", color=\"r\")\n",
+    "plt.fill_between(param_range, train_scores_mean - train_scores_std,\n",
+    "                 train_scores_mean + train_scores_std, alpha=0.2, color=\"r\")\n",
+    "plt.plot(param_range, test_scores_mean, label=\"Cross-validation score\",\n",
+    "             color=\"g\")\n",
+    "plt.fill_between(param_range, test_scores_mean - test_scores_std,\n",
+    "                 test_scores_mean + test_scores_std, alpha=0.2, color=\"g\")\n",
+    "plt.legend(loc=\"best\")\n",
+    "plt.show()"
    ]
   },
   {
