--- a/lewis/ml_test_xgboost_1120.ipynb
+++ b/lewis/ml_test_xgboost_1120.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -50,19 +50,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Time elapsed: 0.3512 secs\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "t = time.time()\n",
     "trn_withRef = trn[trn['Ref'].notnull()]\n",
@@ -71,19 +63,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Time elapsed: 6.9656 secs\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Combine observations by 'Id', aggregate features\n",
     "t = time.time()\n",
@@ -107,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -117,10 +101,11 @@
     "lpo = LogPlusOne()\n",
     "imp = Imputer(strategy='median', copy=False)  # Get a imputor with column-mean filling config\n",
     "ss = StandardScaler(copy=False, with_mean=True, with_std=True)\n",
-    "clf = xgb.sklearn.XGBRegressor(n_estimators=500, nthread=5)\n",
+    "clf = xgb.sklearn.XGBRegressor(n_estimators=500, nthread=5, max_depth=5, learning_rate=0.3)\n",
     "pip = Pipeline([('ttf',ttf), ('lpo',lpo), ('imp',imp), ('ss',ss), ('clf',clf)])  # a Pipeline wrapper to chain'em up\n",
     "def LogPlusOne_score(ground_truth, predictions, lpo=lpo):\n",
-    "    return np.float64(np.mean(np.abs(ground_truth - (np.power(10, predictions) - 1))))"
+    "    return np.float64(np.mean(np.abs(ground_truth - (np.power(10, predictions) - 1))))\n",
+    "scorer = make_scorer(LogPlusOne_score, greater_is_better=True)  # define scoring metric"
    ]
   },
   {
@@ -132,13 +117,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "cleaning.py:22: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  X.drop(indices, inplace=True)\n",
+      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed:  4.3min finished\n"
+     ]
+    }
+   ],
    "source": [
-    "scorer = make_scorer(LogPlusOne_score, greater_is_better=True)  # define scoring metric\n",
     "scores = cross_val_score(estimator=pip, X=X, y=y, scoring=scorer, cv=10, n_jobs=1, verbose=1)"
    ]
   },
@@ -179,21 +176,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23.1870628005 1.5801378357\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Pipeline(steps=[('ttf', <cleaning.TargetThresholdFilter object at 0x7f0adc67b850>), ('lpo', <cleaning.LogPlusOne object at 0x7f0adc67b890>), ('imp', Imputer(axis=0, copy=False, missing_values='NaN', strategy='median',\n",
+       "    verbose=0)), ('ss', StandardScaler(copy=False, with_mean=True, with_std=True)), ('clf',...g:linear', reg_alpha=0, reg_lambda=1,\n",
+       "       scale_pos_weight=1, seed=0, silent=True, subsample=1))])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Pipeline(steps=[\n",
-    "# ('imp', Imputer(axis=0, copy=True, missing_values='NaN', strategy='median', verbose=0))\n",
-    "# ('ss', StandardScaler(copy=False, with_mean=True, with_std=True)), \n",
-    "# ('clf', XGBRegressor(base_score=0.5, colsample_bylevel=1, colsample_bytree=1, gamma=0,\n",
-    "#       learning_rate=0.1, max_delta_step=0, max_depth=3,\n",
-    "#       min_child_weight=1, missing=None, n_estimators=500, nthread=5,\n",
-    "#       objective='reg:linear', reg_alpha=0, reg_lambda=1,\n",
-    "#       scale_pos_weight=1, seed=0, silent=True, subsample=1))])\n",
-    "print np.mean(scores), np.std(scores)"
+    "print np.mean(scores), np.std(scores)\n",
+    "pip"
    ]
   },
   {
