--- a/lewis/ml_test_blending_1120.ipynb
+++ b/lewis/ml_test_blending_1120.ipynb
@@ -59,7 +59,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 0.3512 secs\n"
+      "Time elapsed: 0.3525 secs\n"
      ]
     }
    ],
@@ -80,7 +80,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 6.9656 secs\n"
+      "Time elapsed: 6.9981 secs\n"
      ]
     }
    ],
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -117,10 +117,10 @@
     "lpo = LogPlusOne()\n",
     "imp = Imputer(strategy='median', copy=False)  # Get a imputor with column-mean filling config\n",
     "ss = StandardScaler(copy=False, with_mean=True, with_std=True)\n",
-    "base1 = RandomForestRegressor(n_estimators=800, max_features='sqrt', max_depth=5, n_jobs=6)  # NOTE: n_jobs=-1 will use all of your cores, set to a prefered number e.g. 4\n",
-    "base2 = LinearRegression()\n",
-    "base3 = Ridge()\n",
-    "base4 = xgb.sklearn.XGBRegressor(n_estimators=500, nthread=5)\n",
+    "base1 = RandomForestRegressor(n_estimators=800, max_features='sqrt', max_depth=5, n_jobs=7)  # NOTE: n_jobs=-1 will use all of your cores, set to a prefered number e.g. 4\n",
+    "base2 = xgb.sklearn.XGBRegressor(n_estimators=500, nthread=6)\n",
+    "base3 = LinearRegression()\n",
+    "base4 = Ridge()\n",
     "blender = LinearRegression()\n",
     "clf = BlendedRegressor(base_models=(base1, base2, base3, base4), blending_model=blender, blending_split=10)\n",
     "pip = Pipeline([('ttf',ttf), ('lpo',lpo), ('imp',imp), ('ss',ss), ('clf',clf)])  # a Pipeline wrapper to chain'em up\n",
@@ -137,11 +137,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "cleaning.py:22: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  X.drop(indices, inplace=True)\n",
+      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed: 75.2min finished\n"
+     ]
+    }
+   ],
    "source": [
     "scorer = make_scorer(LogPlusOne_score, greater_is_better=True)  # define scoring metric\n",
     "scores = cross_val_score(estimator=pip, X=X, y=y, scoring=scorer, cv=10, n_jobs=1, verbose=1)"
@@ -149,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -159,46 +173,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23.1870628005 1.5801378357\n"
+      "23.1830256276 1.58302032266\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed: 46.5min finished\n"
-     ]
+     "data": {
+      "text/plain": [
+       "Pipeline(steps=[('ttf', <cleaning.TargetThresholdFilter object at 0x7f846dca14d0>), ('lpo', <cleaning.LogPlusOne object at 0x7f846dca18d0>), ('imp', Imputer(axis=0, copy=False, missing_values='NaN', strategy='median',\n",
+       "    verbose=0)), ('ss', StandardScaler(copy=False, with_mean=True, with_std=True)), ('clf',...egression(copy_X=True, fit_intercept=True, n_jobs=1, normalize=False),\n",
+       "         blending_split=10))])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Pipeline(steps=[\n",
-    "# ('imp', Imputer(axis=0, copy=True, missing_values='NaN', strategy='median', verbose=0))\n",
-    "# ('ss', StandardScaler(copy=False, with_mean=True, with_std=True)), \n",
-    "# ('clf', XGBRegressor(base_score=0.5, colsample_bylevel=1, colsample_bytree=1, gamma=0,\n",
-    "#       learning_rate=0.1, max_delta_step=0, max_depth=3,\n",
-    "#       min_child_weight=1, missing=None, n_estimators=500, nthread=5,\n",
-    "#       objective='reg:linear', reg_alpha=0, reg_lambda=1,\n",
-    "#       scale_pos_weight=1, seed=0, silent=True, subsample=1))])\n",
-    "print np.mean(scores), np.std(scores)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Pipeline(steps=[\n",
-    "# ('imp', Imputer(axis=0, copy=True, missing_values='NaN', strategy='median', verbose=0))\n",
-    "# ('ss', StandardScaler(copy=False, with_mean=True, with_std=True)), \n",
-    "# ('clf', XGBRegressor(base_score=0.5, colsample_bylevel=1, colsample_bytree=1, gamma=0,\n",
-    "#       learning_rate=0.1, max_delta_step=0, max_depth=3,\n",
-    "#       min_child_weight=1, missing=None, n_estimators=500, nthread=5,\n",
-    "#       objective='reg:linear', reg_alpha=0, reg_lambda=1,\n",
-    "#       scale_pos_weight=1, seed=0, silent=True, subsample=1))])\n",
-    "print np.mean(scores), np.std(scores)"
+    "print np.mean(scores), np.std(scores)\n",
+    "pip"
    ]
   },
   {
@@ -210,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -218,13 +211,12 @@
     {
      "data": {
       "text/plain": [
-       "Pipeline(steps=[('imp', Imputer(axis=0, copy=False, missing_values='NaN', strategy='median',\n",
-       "    verbose=0)), ('ss', StandardScaler(copy=False, with_mean=True, with_std=True)), ('clf', XGBRegressor(base_score=0.5, colsample_bylevel=1, colsample_bytree=1, gamma=0,\n",
-       "       learning_rate=0.1, max_delta_step=0, m...g:linear', reg_alpha=0, reg_lambda=1,\n",
-       "       scale_pos_weight=1, seed=0, silent=True, subsample=1))])"
+       "Pipeline(steps=[('ttf', <cleaning.TargetThresholdFilter object at 0x7f846dca14d0>), ('lpo', <cleaning.LogPlusOne object at 0x7f846dca18d0>), ('imp', Imputer(axis=0, copy=False, missing_values='NaN', strategy='median',\n",
+       "    verbose=0)), ('ss', StandardScaler(copy=False, with_mean=True, with_std=True)), ('clf',...egression(copy_X=True, fit_intercept=True, n_jobs=1, normalize=False),\n",
+       "         blending_split=10))])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -251,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -260,7 +252,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../data/result_20151121_124706.csv\n"
+      "../data/result_20151122_015933.csv\n"
      ]
     }
    ],
