Sweep on target threshold.

--- a/lewis/ml_test_xgboost_1121.ipynb
+++ b/lewis/ml_test_xgboost_1121.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -50,11 +50,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time elapsed: 0.3542 secs\n"
+     ]
+    }
+   ],
    "source": [
     "t = time.time()\n",
     "trn_withRef = trn[trn['Ref'].notnull()]\n",
@@ -63,11 +71,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time elapsed: 7.0609 secs\n"
+     ]
+    }
+   ],
    "source": [
     "# Combine observations by 'Id', aggregate features\n",
     "t = time.time()\n",
@@ -79,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -91,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -117,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -126,12 +142,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "cleaning.py:22: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  X.drop(indices, inplace=True)\n",
-      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed:  4.3min finished\n"
+      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed: 71.8min finished\n"
      ]
     }
    ],
@@ -176,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -185,25 +196,70 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23.1870628005 1.5801378357\n"
+      "23.2120059037 1.55426425433\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "Pipeline(steps=[('ttf', <cleaning.TargetThresholdFilter object at 0x7f0adc67b850>), ('lpo', <cleaning.LogPlusOne object at 0x7f0adc67b890>), ('imp', Imputer(axis=0, copy=False, missing_values='NaN', strategy='median',\n",
-       "    verbose=0)), ('ss', StandardScaler(copy=False, with_mean=True, with_std=True)), ('clf',...g:linear', reg_alpha=0, reg_lambda=1,\n",
-       "       scale_pos_weight=1, seed=0, silent=True, subsample=1))])"
+       "{'clf': XGBRegressor(base_score=0.5, colsample_bylevel=1, colsample_bytree=1, gamma=0,\n",
+       "        learning_rate=0.3, max_delta_step=0, max_depth=5,\n",
+       "        min_child_weight=1, missing=None, n_estimators=500, nthread=5,\n",
+       "        objective='reg:linear', reg_alpha=0, reg_lambda=1,\n",
+       "        scale_pos_weight=1, seed=0, silent=True, subsample=1),\n",
+       " 'clf__base_score': 0.5,\n",
+       " 'clf__colsample_bylevel': 1,\n",
+       " 'clf__colsample_bytree': 1,\n",
+       " 'clf__gamma': 0,\n",
+       " 'clf__learning_rate': 0.3,\n",
+       " 'clf__max_delta_step': 0,\n",
+       " 'clf__max_depth': 5,\n",
+       " 'clf__min_child_weight': 1,\n",
+       " 'clf__missing': None,\n",
+       " 'clf__n_estimators': 500,\n",
+       " 'clf__nthread': 5,\n",
+       " 'clf__objective': 'reg:linear',\n",
+       " 'clf__reg_alpha': 0,\n",
+       " 'clf__reg_lambda': 1,\n",
+       " 'clf__scale_pos_weight': 1,\n",
+       " 'clf__seed': 0,\n",
+       " 'clf__silent': True,\n",
+       " 'clf__subsample': 1,\n",
+       " 'imp': Imputer(axis=0, copy=False, missing_values='NaN', strategy='median',\n",
+       "     verbose=0),\n",
+       " 'imp__axis': 0,\n",
+       " 'imp__copy': False,\n",
+       " 'imp__missing_values': 'NaN',\n",
+       " 'imp__strategy': 'median',\n",
+       " 'imp__verbose': 0,\n",
+       " 'lpo': LogPlusOne(),\n",
+       " 'ss': StandardScaler(copy=False, with_mean=True, with_std=True),\n",
+       " 'ss__copy': False,\n",
+       " 'ss__with_mean': True,\n",
+       " 'ss__with_std': True,\n",
+       " 'steps': [('ttf', TargetThresholdFilter(threshold=inf)),\n",
+       "  ('lpo', LogPlusOne()),\n",
+       "  ('imp', Imputer(axis=0, copy=False, missing_values='NaN', strategy='median',\n",
+       "       verbose=0)),\n",
+       "  ('ss', StandardScaler(copy=False, with_mean=True, with_std=True)),\n",
+       "  ('clf',\n",
+       "   XGBRegressor(base_score=0.5, colsample_bylevel=1, colsample_bytree=1, gamma=0,\n",
+       "          learning_rate=0.3, max_delta_step=0, max_depth=5,\n",
+       "          min_child_weight=1, missing=None, n_estimators=500, nthread=5,\n",
+       "          objective='reg:linear', reg_alpha=0, reg_lambda=1,\n",
+       "          scale_pos_weight=1, seed=0, silent=True, subsample=1))],\n",
+       " 'ttf': TargetThresholdFilter(threshold=inf),\n",
+       " 'ttf__threshold': inf}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "print np.mean(scores), np.std(scores)\n",
-    "pip"
+    "pip.get_params()"
    ]
   },
   {
@@ -215,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -223,13 +279,12 @@
     {
      "data": {
       "text/plain": [
-       "Pipeline(steps=[('imp', Imputer(axis=0, copy=False, missing_values='NaN', strategy='median',\n",
-       "    verbose=0)), ('ss', StandardScaler(copy=False, with_mean=True, with_std=True)), ('clf', XGBRegressor(base_score=0.5, colsample_bylevel=1, colsample_bytree=1, gamma=0,\n",
-       "       learning_rate=0.1, max_delta_step=0, m...g:linear', reg_alpha=0, reg_lambda=1,\n",
+       "Pipeline(steps=[('ttf', TargetThresholdFilter(threshold=inf)), ('lpo', LogPlusOne()), ('imp', Imputer(axis=0, copy=False, missing_values='NaN', strategy='median',\n",
+       "    verbose=0)), ('ss', StandardScaler(copy=False, with_mean=True, with_std=True)), ('clf', XGBRegressor(base_score=0.5, colsample_bylevel=1, cols...g:linear', reg_alpha=0, reg_lambda=1,\n",
        "       scale_pos_weight=1, seed=0, silent=True, subsample=1))])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -256,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -265,7 +320,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "../data/result_20151121_124706.csv\n"
+      "../data/result_20151122_102648.csv\n"
      ]
     }
    ],
@@ -285,6 +340,15 @@
     "test_result.to_csv('../data/result_'+datetime_str+'.csv', index=False)\n",
     "print '../data/result_'+datetime_str+'.csv'"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
