--- a/lewis/ml_test_blending_1122.ipynb
+++ b/lewis/ml_test_blending_1122.ipynb
@@ -8,31 +8,31 @@
    },
    "outputs": [],
    "source": [
+    "# Basics\n",
+    "import sys\n",
     "import time\n",
-    "#\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "# \n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.preprocessing import Imputer\n",
-    "from sklearn.tree import DecisionTreeRegressor\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
+    "# Sklearn\n",
+    "from sklearn.preprocessing import StandardScaler, Imputer \n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.linear_model import Ridge\n",
-    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.cross_validation import cross_val_score, ShuffleSplit\n",
     "from sklearn.learning_curve import learning_curve, validation_curve\n",
     "from sklearn.metrics import make_scorer\n",
-    "#\n",
+    "# xgboost\n",
     "import xgboost as xgb\n",
-    "#\n",
-    "from blending import BlendedRegressor\n",
-    "from cleaning import TargetThresholdFilter, LogPlusOne\n",
-    "#\n",
+    "# Our custom modules\n",
+    "sys.path.append('..')\n",
+    "from anrg.pipeline import Pipeline # my customized Pipeline\n",
+    "from anrg.blending import BlendedRegressor\n",
+    "from anrg.cleaning import TargetThresholdFilter, LogPlusOne\n",
+    "##### setting #######\n",
     "pd.set_option('display.max_columns', 500)  # force pandas to display all columns for better visual inspection\n",
-    "# plot plots inline\n",
-    "%matplotlib inline  "
+    "%matplotlib inline"
    ]
   },
   {
@@ -43,9 +43,30 @@
    },
    "outputs": [],
    "source": [
-    "# trn = pd.read_csv('../data/train.csv')\n",
+    "trn = pd.read_csv('../data/train.csv')\n",
     "# trn = pd.read_csv('../data/train_10.csv', index_col=0)  # column #0 in our file is DataFrame index\n",
-    "trn = pd.read_csv('../data/train_1.csv', index_col=0)"
+    "# trn = pd.read_csv('../data/train_1.csv', index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time elapsed: 0.3525 secs\n"
+     ]
+    }
+   ],
+   "source": [
+    "t = time.time()\n",
+    "trn_withRef = trn[trn['Ref'].notnull()]\n",
+    "print 'Time elapsed: {:.4f} secs'.format(time.time()-t)  # toc"
    ]
   },
   {
@@ -59,28 +80,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 0.0209 secs\n"
-     ]
-    }
-   ],
-   "source": [
-    "t = time.time()\n",
-    "trn_withRef = trn[trn['Ref'].notnull()]\n",
-    "print 'Time elapsed: {:.4f} secs'.format(time.time()-t)  # toc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Time elapsed: 0.3620 secs\n"
+      "Time elapsed: 6.9981 secs\n"
      ]
     }
    ],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -117,7 +117,12 @@
     "lpo = LogPlusOne()\n",
     "imp = Imputer(strategy='median', copy=False)  # Get a imputor with column-mean filling config\n",
     "ss = StandardScaler(copy=False, with_mean=True, with_std=True)\n",
-    "clf = xgb.sklearn.XGBRegressor(n_estimators=500, nthread=6)\n",
+    "base1 = RandomForestRegressor(n_estimators=800, max_features='sqrt', max_depth=5, n_jobs=7)  # NOTE: n_jobs=-1 will use all of your cores, set to a prefered number e.g. 4\n",
+    "base2 = xgb.sklearn.XGBRegressor(n_estimators=500, nthread=6)\n",
+    "base3 = LinearRegression()\n",
+    "base4 = Ridge()\n",
+    "blender = LinearRegression()\n",
+    "clf = BlendedRegressor(base_models=(base1, base2, base3, base4), blending_model=blender, blending_split=10)\n",
     "pip = Pipeline([('ttf',ttf), ('lpo',lpo), ('imp',imp), ('ss',ss), ('clf',clf)])  # a Pipeline wrapper to chain'em up\n",
     "def LogPlusOne_score(ground_truth, predictions, lpo=lpo):\n",
     "    return np.float64(np.mean(np.abs(ground_truth - (np.power(10, predictions) - 1))))\n",
@@ -135,8 +140,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": false,
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
@@ -160,7 +164,8 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -185,38 +190,7 @@
    ],
    "source": [
     "print np.mean(scores), np.std(scores)\n",
-    "pip"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# Sweep parameter\n",
-    "param_name, param_range='ttf__threshold', np.arange(10, 200, 10)\n",
-    "train_scores, test_scores= validation_curve(estimator=pip, X=X, y=y, scoring=scorer, cv=10, n_jobs=1, \n",
-    "                          param_name=param_name, param_range=param_range, verbose=1)\n",
-    "train_scores_mean = np.mean(train_scores, axis=1)\n",
-    "train_scores_std = np.std(train_scores, axis=1)\n",
-    "test_scores_mean = np.mean(test_scores, axis=1)\n",
-    "test_scores_std = np.std(test_scores, axis=1)\n",
-    "# Plotting the validation curver, i.e. trn/val error versus parameter value\n",
-    "plt.title(\"Validation Curve\")\n",
-    "plt.xlabel(param_name)\n",
-    "plt.ylabel(\"Score\")\n",
-    "plt.plot(param_range, train_scores_mean, label=\"Training score\", color=\"r\")\n",
-    "plt.fill_between(param_range, train_scores_mean - train_scores_std,\n",
-    "                 train_scores_mean + train_scores_std, alpha=0.2, color=\"r\")\n",
-    "plt.plot(param_range, test_scores_mean, label=\"Cross-validation score\",\n",
-    "             color=\"g\")\n",
-    "plt.fill_between(param_range, test_scores_mean - test_scores_std,\n",
-    "                 test_scores_mean + test_scores_std, alpha=0.2, color=\"g\")\n",
-    "plt.legend(loc=\"best\")\n",
-    "plt.show()"
+    "pip.get_params()['steps']"
    ]
   },
   {
