--- a/lewis/ml_test_ttf_1122.ipynb
+++ b/lewis/ml_test_ttf_1122.ipynb
@@ -4,40 +4,40 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
+    "# Basics\n",
+    "import sys\n",
     "import time\n",
-    "#\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "# \n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.preprocessing import Imputer\n",
-    "from sklearn.tree import DecisionTreeRegressor\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
+    "# Sklearn\n",
+    "from sklearn.preprocessing import StandardScaler, Imputer \n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.linear_model import Ridge\n",
-    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.cross_validation import cross_val_score, ShuffleSplit\n",
     "from sklearn.learning_curve import learning_curve, validation_curve\n",
     "from sklearn.metrics import make_scorer\n",
-    "#\n",
+    "# xgboost\n",
     "import xgboost as xgb\n",
-    "#\n",
-    "from blending import BlendedRegressor\n",
-    "from cleaning import TargetThresholdFilter, LogPlusOne\n",
-    "#\n",
+    "# Our custom modules\n",
+    "sys.path.append('..')\n",
+    "from anrg.pipeline import Pipeline # my customized Pipeline\n",
+    "from anrg.blending import BlendedRegressor\n",
+    "from anrg.cleaning import TargetThresholdFilter, LogPlusOne\n",
+    "##### setting #######\n",
     "pd.set_option('display.max_columns', 500)  # force pandas to display all columns for better visual inspection\n",
-    "# plot plots inline\n",
-    "%matplotlib inline  "
+    "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -59,7 +59,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 0.3525 secs\n"
+      "Time elapsed: 0.3549 secs\n"
      ]
     }
    ],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -80,7 +80,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 6.9981 secs\n"
+      "Time elapsed: 7.0304 secs\n"
      ]
     }
    ],
@@ -95,37 +95,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(731556, 132) (731556,)\n",
+      "0.010000005 33017.73\n"
+     ]
+    }
+   ],
    "source": [
     "X = trn_withRef_comb.loc[:, 'minutes_past_mean':'Kdp_5x5_90th_max']  # NOTE: used range slicing on column\n",
-    "y = trn_withRef_comb['Expected_mean']"
+    "y = trn_withRef_comb['Expected_mean']\n",
+    "print X.shape, y.shape\n",
+    "print y.min(), y.max()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "ttf = TargetThresholdFilter(threshold=np.inf)\n",
+    "ttf = TargetThresholdFilter(threshold=40)\n",
     "lpo = LogPlusOne()\n",
     "imp = Imputer(strategy='median', copy=False)  # Get a imputor with column-mean filling config\n",
     "ss = StandardScaler(copy=False, with_mean=True, with_std=True)\n",
-    "base1 = RandomForestRegressor(n_estimators=800, max_features='sqrt', max_depth=5, n_jobs=7)  # NOTE: n_jobs=-1 will use all of your cores, set to a prefered number e.g. 4\n",
-    "base2 = xgb.sklearn.XGBRegressor(n_estimators=500, nthread=6)\n",
-    "base3 = LinearRegression()\n",
-    "base4 = Ridge()\n",
-    "blender = LinearRegression()\n",
-    "clf = BlendedRegressor(base_models=(base1, base2, base3, base4), blending_model=blender, blending_split=10)\n",
-    "pip = Pipeline([('ttf',ttf), ('lpo',lpo), ('imp',imp), ('ss',ss), ('clf',clf)])  # a Pipeline wrapper to chain'em up\n",
+    "clf = xgb.sklearn.XGBRegressor(n_estimators=10, nthread=6)\n",
+    "pip = Pipeline([('ttf',ttf), ('lpo',lpo),('imp',imp), ('ss',ss), ('clf',clf)])  # a Pipeline wrapper to chain'em up\n",
     "def LogPlusOne_score(ground_truth, predictions, lpo=lpo):\n",
-    "    return np.float64(np.mean(np.abs(ground_truth - (np.power(10, predictions) - 1))))"
+    "    return np.float64(np.mean(np.abs(ground_truth - (np.power(10, predictions) - 1))))\n",
+    "scorer = make_scorer(LogPlusOne_score, greater_is_better=True)  # define scoring metric"
    ]
   },
   {
@@ -137,61 +144,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": false,
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "cleaning.py:22: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  X.drop(indices, inplace=True)\n",
-      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed: 75.2min finished\n"
+      "[Parallel(n_jobs=1)]: Done  10 out of  10 | elapsed:    7.9s finished\n"
      ]
     }
    ],
    "source": [
-    "scorer = make_scorer(LogPlusOne_score, greater_is_better=True)  # define scoring metric\n",
     "scores = cross_val_score(estimator=pip, X=X, y=y, scoring=scorer, cv=10, n_jobs=1, verbose=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "scrolled": true
+    "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "23.1830256276 1.58302032266\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Pipeline(steps=[('ttf', <cleaning.TargetThresholdFilter object at 0x7f846dca14d0>), ('lpo', <cleaning.LogPlusOne object at 0x7f846dca18d0>), ('imp', Imputer(axis=0, copy=False, missing_values='NaN', strategy='median',\n",
-       "    verbose=0)), ('ss', StandardScaler(copy=False, with_mean=True, with_std=True)), ('clf',...egression(copy_X=True, fit_intercept=True, n_jobs=1, normalize=False),\n",
-       "         blending_split=10))])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print np.mean(scores), np.std(scores)\n",
-    "pip"
+    "# Sweep parameter\n",
+    "param_name, param_range='ttf__threshold', np.arange(20,60,5)\n",
+    "train_scores, test_scores= validation_curve(estimator=pip, X=X, y=y, scoring=scorer, cv=10, n_jobs=1, \n",
+    "                          param_name=param_name, param_range=param_range, verbose=1)\n",
+    "train_scores_mean = np.mean(train_scores, axis=1)\n",
+    "train_scores_std = np.std(train_scores, axis=1)\n",
+    "test_scores_mean = np.mean(test_scores, axis=1)\n",
+    "test_scores_std = np.std(test_scores, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print pip.get_params()['steps']\n",
+    "print train_scores_mean\n",
+    "print test_scores_mean\n",
+    "# Plotting the validation curver, i.e. trn/val error versus parameter value\n",
+    "plt.title(\"Validation Curve\")\n",
+    "plt.xlabel(param_name)\n",
+    "plt.ylabel(\"Score\")\n",
+    "plt.plot(param_range, train_scores_mean, label=\"Training score\", color=\"r\")\n",
+    "# plt.fill_between(param_range, train_scores_mean - train_scores_std, train_scores_mean + train_scores_std, alpha=0.2, color=\"r\")\n",
+    "plt.plot(param_range, test_scores_mean, label=\"Cross-validation score\", color=\"g\")\n",
+    "# plt.fill_between(param_range, test_scores_mean - test_scores_std, test_scores_mean + test_scores_std, alpha=0.2, color=\"g\")\n",
+    "plt.legend(loc=\"best\")\n",
+    "plt.show()"
    ]
   },
   {
